--- a/public/stylesheets/dashboard.styl
+++ b/public/stylesheets/dashboard.styl
@@ -17,5 +17,8 @@ main-serif = ''
 	height 20em
 	width 100%
 	text-align center
-	background url('../images/pattern.png')
+	background url('../images/pattern.jpg')
 	background-size cover
+	
+	div
+		width 100%
