--- a/views/room.jade
+++ b/views/room.jade
@@ -90,6 +90,7 @@ html
                         div#clearBoard.btn Clear
                         div#setModeDraw.btn Draw
                         div#setModeErase.btn Erase
+                        div#downloadImage.btn Download
 
                     button#swapButton.waves-effect.light-blue.accent-4.btn.material-icons aspect_ratio
 
