--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -23,10 +23,13 @@ html
                         a(href='#') sidharth &#x25BC;
 
         div.valign-wrapper#start-container.center-align
-            div.valign.center-align YO
-                //- a.waves-effect.waves-light.btn-large
-                //-     span Start an Interview
-                //-     i.material-icons.right cloud
+            div.valign.center-align 
+                a.waves-effect.green.lighten-1.btn-large
+                    span Start an Interview
+                    i.material-icons.right cloud
+
+        
+
 
 
 
