Partial call_script changes

--- a/public/stylesheets/room.styl
+++ b/public/stylesheets/room.styl
@@ -27,6 +27,7 @@ nav
 .outer-container
 	height 88%
 	bottom 0
+	margin-bottom 0
 
 .inner-container
 	bottom 0
@@ -75,7 +76,8 @@ nav
 	display block
 		
 .CodeMirror
-	height 85vh
+	// height 85vh
+	height 100%
 	
 .iobox
 	background-color lightest-grey
