--- a/public/stylesheets/room.css
+++ b/public/stylesheets/room.css
@@ -13,6 +13,7 @@ nav {
 .outer-container {
   height: 88%;
   bottom: 0;
+  margin-bottom: 0;
 }
 .inner-container {
   bottom: 0;
@@ -60,7 +61,7 @@ nav {
   display: block;
 }
 .CodeMirror {
-  height: 85vh;
+  height: 100%;
 }
 .iobox {
   background-color: #efefef;
