--- a/views/room.jade
+++ b/views/room.jade
@@ -10,7 +10,9 @@ html
         link(rel='stylesheet', href='/stylesheets/jquery-ui-1.8.2.custom.css', type='text/css', media='screen')
         link(type='text/css', href='/stylesheets/jquery.ui.chatbox.css', rel='stylesheet')
         link(rel='stylesheet',href='/stylesheets/room.css')
+        link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css')    
 
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js')
         script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js")
         script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.js")
         script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
@@ -47,7 +49,7 @@ html
             div.nav-wrapper.light-blue.accent-4
                 a.brand-logo(href='#')#main-logo HackerHire
                 ul#nav-mobile.right.hide-on-med-and-down
-                    li
+                    li#invite
                         a.waves-effect.waves-light.btn
                             span Invite
 
