--- a/public/stylesheets/room.styl
+++ b/public/stylesheets/room.styl
@@ -76,8 +76,8 @@ nav
 	display block
 		
 .CodeMirror
-	// height 85vh
-	height 100%
+	height 82.3vh
+	// height 
 	
 .iobox
 	background-color lightest-grey
