--- a/views/room.jade
+++ b/views/room.jade
@@ -11,13 +11,14 @@ html
         link(type='text/css', href='/stylesheets/jquery.ui.chatbox.css', rel='stylesheet')
         link(rel='stylesheet',href='/stylesheets/room.css')
         link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css')    
+        link(href='https://www.gstatic.com/realtime/quickstart-styles.css', rel='stylesheet', type='text/css')
 
         script(src='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js')
         script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js")
         script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.js")
         script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
-        script(type="text/javascript", src="/scripts/call_script.js")
         script(src='/scripts/compiler.js')
+        script(type="text/javascript", src="/scripts/call_script.js")
         
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.js')
@@ -39,10 +40,6 @@ html
             initRealTimeApi();
             
             }
-
-        
-        
-
 
     body(onload='initRoom();')
         nav
@@ -89,7 +86,8 @@ html
                         div#clearBoard.btn Clear
                         div#setModeDraw.btn Draw
                         div#setModeErase.btn Erase
-                        div#downloadImage.btn Download
+                    a#imageLink(href='', download='board.png')
+                        div#downloadImage.btn Download    
 
                     button#swapButton.waves-effect.light-blue.accent-4.btn.material-icons aspect_ratio
 
